notification and signature

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "register-service-worker": "^1.7.2",
+    "signature_pad": "^4.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
